--- a/app/src/main/res/layout/activity_update_add.xml
+++ b/app/src/main/res/layout/activity_update_add.xml
@@ -10,17 +10,6 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tambah Data Pasien."
-        android:textSize="25sp"
-        android:textColor="@color/dark"
-        android:textStyle="bold"
-        android:fontFamily="@font/poppins_medium"
-        android:layout_marginBottom="20dp"/>
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nama Pasien"
@@ -58,6 +47,7 @@
         android:hint="Masukkan No.Telepon Pasien"
         android:textColor="@color/dark"
         android:fontFamily="@font/poppins_medium"
+        android:inputType="phone"
         android:paddingTop="10dp"
         android:paddingBottom="5dp"
         android:paddingLeft="20dp"
